##### version 1.3.2

200214 Rick Gelhausen & Florian Eggenhofer
 + updated sge.yaml
 + updated torque.yaml
 + bugfixed retrieveAnnotation
 + updated manual

##### version 1.3.1

200213 Rick Gelhausen & Florian Eggenhofer
 + added makereport script

##### version 1.3.0

200130 Rick Gelhausen & Florian Eggenhofer
 + integration of deepribo
 + added metagene profiling
 + added pseudogene read counting
 + refactoring of scripts folder
 + renamed summary.xlsx -> predictions_reparation.xlsx
 + removal of unneeded dependencies
 + Refactored Snakefiles

##### version 1.2.0

200122 Rick Gelhausen & Florian Eggenhofer
 + updated reparation to v1.0.9
 + added differential expression analysis with Riborex and Xtail
 + added TIS support to generate_excel.py
 + standardized output annotation to GFF3 format
 + updated HRIBO Manual

##### version 1.1.0

190822 Rick Gelhausen & Florian Eggenhofer
 + added paired-end support
  + paired-end mapping (currently no tools allowing this exist)
  + combined paired-end mapping
  + improved samples.xlsx (for paired end)
  + improved count_tables (rounding numbers to 2 floating points)
  + fix for annotation generation

##### version 1.0.0

190808 Rick Gelhausen & Florian Eggenhofer
 + initial commit